@@ -40,6 +40,7 @@ Bugs fixed:
 - 3483200 duplicate indication deliveries
 - 3496061 IndicationSubscription May Be Undeletable
 - 3484083 Exclude SFCBIndicationID
+- 3496383 Faster Return from CBDeliverIndication
 
 Changes in 1.3.13
 =================
